software/servo_sensor_testing/veml7700-esp-idf-main/build/log/idf_py_stdout_output_66300
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\binhp\esp\v5.2\servo_sensor_testing\veml7700-esp-idf-main\build\bootloader\esp-idf\esptool_py && C:\Users\binhp\.espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Users/binhp/esp/v5.2/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main/build/bootloader/bootloader.bin"
Bootloader binary size 0x5440 bytes. 0x2bc0 bytes (34%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/astrocom.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/astrocom.c.obj 
ccache C:\Users\binhp\.espressif\tools\riscv32-esp-elf\esp-13.2.0_20230928\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main/build/config -IC:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/newlib/platform_include -IC:/Users/binhp/esp/v5.2/esp-idf/components/freertos/config/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/freertos/config/include/freertos -IC:/Users/binhp/esp/v5.2/esp-idf/components/freertos/config/riscv/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Users/binhp/esp/v5.2/esp-idf/components/freertos/esp_additions/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_hw_support/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_hw_support/include/soc -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_hw_support/include/soc/esp32c6 -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_hw_support/port/esp32c6/. -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_hw_support/port/esp32c6/private_include -IC:/Users/binhp/esp/v5.2/esp-idf/components/heap/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/log/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/soc/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/soc/esp32c6 -IC:/Users/binhp/esp/v5.2/esp-idf/components/soc/esp32c6/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/hal/platform_port/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/hal/esp32c6/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/hal/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_rom/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_rom/include/esp32c6 -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_rom/esp32c6 -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_common/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_system/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_system/port/soc -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_system/port/include/riscv -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_system/port/include/private -IC:/Users/binhp/esp/v5.2/esp-idf/components/riscv/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/lwip/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/lwip/include/apps -IC:/Users/binhp/esp/v5.2/esp-idf/components/lwip/include/apps/sntp -IC:/Users/binhp/esp/v5.2/esp-idf/components/lwip/lwip/src/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/lwip/port/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/lwip/port/freertos/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/binhp/esp/v5.2/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_event/include -IC:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main/components/esp_idf_lib_helpers -IC:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main/components/i2cdev -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/deprecated -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/analog_comparator/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/dac/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/gpio/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/gptimer/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/i2c/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/i2s/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/ledc/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/mcpwm/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/parlio/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/pcnt/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/rmt/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/sdio_slave/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/sdmmc/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/sigma_delta/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/spi/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/temperature_sensor/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/touch_sensor/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/twai/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/uart/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/driver/usb_serial_jtag/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_pm/include -IC:/Users/binhp/esp/v5.2/esp-idf/components/esp_ringbuf/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main=. -fmacro-prefix-map=C:/Users/binhp/esp/v5.2/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/astrocom.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\astrocom.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/astrocom.c.obj -c C:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main/main/astrocom.c
C:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main/main/astrocom.c: In function 'app_main':
C:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main/main/astrocom.c:146:34: error: 'USBA_PIN' undeclared (first use in this function); did you mean 'USBC_PIN'?
  146 |     esp_rom_gpio_pad_select_gpio(USBA_PIN);
      |                                  ^~~~~~~~
      |                                  USBC_PIN
C:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main/main/astrocom.c:146:34: note: each undeclared identifier is reported only once for each function it appears in
C:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main/main/astrocom.c: In function 'timer_isr':
C:/Users/binhp/esp/v5.2/servo_sensor_testing/veml7700-esp-idf-main/main/astrocom.c:221:42: error: 'j' undeclared (first use in this function)
  221 |             set_servo_angle(I2C_PORT, i, j);
      |                                          ^
ninja: build stopped: subcommand failed.
